...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/registerScrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...

                <TextView
                    android:id="@+id/registerTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
...

                <TextView
                    android:id="@+id/registerSubtitle"
                    style="@style/TextViewStyle"
                    android:layout_width="270sp"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/customerType"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
...

                    <AutoCompleteTextView
                        android:id="@+id/customerTypeDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/beforeCustomerTypeSelection"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/firstName"
                                style="@style/TextFieldSmall"
                                android:layout_width="match_parent"
...

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/lastName"
                                style="@style/TextFieldSmall"
                                android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_register"
                            style="@style/TextFieldSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            style="@style/TextFieldSmall"
                            android:layout_width="match_parent"
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_register"
                            style="@style/TextFieldSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1" />
...

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPassword"
                            style="@style/TextFieldSmall"
                            android:layout_width="match_parent"
...

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
...
