<resources>
    <string name="app_name">Login</string>
    <string name="title">Welcome to Android</string>
    <string name="subtitle">Please login into your account &amp; if you have no account please register</string>
    <string name="loginButton">LOGIN</string>
    <string name="hello">Hello</string>
    <string name="forgotPass">Forgot Password ?</string>
    <string name="forgotPassActivitySubHeading">This activity would be used to reset the password !</string>
    <string name="createAccount">Create Account</string>
    <string name="createAccountSubtitle">Do not have an account ?<br /> Register Here</string>
    <string name="phone">Phone</string>
    <string name="registerButton">Register</string>
    <string name="createAccountButton">Create Account / SignUp</string>
    <string name="residentialRegistrationSuccessful">Your Residential Registration is Successful :)\nPlease Login to Continue …</string>
    <string name="dialogPositive">Okay</string>
    <string name="dialogNegative">Cancel</string>
    <string name="registrationDialogTitle">Registration</string>
    <string name="error_emptyFields">Please enter all the fields</string>
    <string name="error_emptyFirstName">Please enter your First Name</string>
    <string name="error_emptyLastName">Please enter your Last Name</string>
    <string name="error_emptyEmail">Please enter your Email</string>
    <string name="error_emptyPhone">Please enter your Phone Number</string>
    <string name="error_emptyPassword">Please enter a Password</string>
    <string name="error_emptyConfirmPassword">Please confirm your Password</string>
    <string name="error_invalidEmail">Invalid Email Address</string>
    <string name="error_invalidPhone">Phone number must have 10 digits only</string>
    <string name="error_weakPassword">Please enter a stronger Password</string>
    <string name="error_passwordsDoNoMatch">Please reconfirm your Password</string>
    <string name="deepRed">#C70039</string>
    <string name="loginSuccessful">Login Successful :)</string>
    <string name="dialog_login_title">Welcome to Android !</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="business_name">Business Name</string>
    <string name="cin_number">CIN</string>
    <string name="selectCustomerType">Select Customer Type</string>
    <string name="customerType_residential">Residential</string>
    <string name="customerType_commercial">Commercial</string>
    <string name="noCustomerTypeSelected">Please select your Customer Type to proceed for further registration process</string>
    <string name="error_emptyBusinessName">Please enter your Business Name</string>
    <string name="error_emptyCin">Please enter  CIN number</string>
    <string name="error_invalidCIN">Please enter a valid CIN number of 21 characters only</string>
    <string name="commercialRegistrationSuccessful">Your registration as a Commercial Customer is Successful :)\nPlease login to Continue …</string>
    <string name="registrationUnsuccessful">Registration Unsuccessful</string>
    <string name="error_emptyField">Empty Field</string>
    <string name="all_users">List of all Registered Users</string>
    <string name="invalidCredentials">Invalid Credentials or \nUser not Registered :(</string>
    <string name="lightBlue">#5499C7</string>
    <string name="alreadyRegisteredEntryFound">We found an already existing Registration on this email.\nKindly register using another email :(</string>
    <string name="clearDB">Clear Database</string>
    <string name="logout">Logout</string>
    <string name="deleteRecord">Delete</string>
    <string name="error_password">Invalid or Empty Password</string>
    <string name="databaseName">login_app_database</string>
    <string name="bundleArgEmail">email</string>
    <string name="bundleKey">args</string>
    <string name="defaultUserName">User</string>
    <string name="myPrefs">loginPrefs</string>
    <string name="sharedPrefsEmail">email</string>
    <string name="windowsBlue">#1E90FF</string>
    <string name="sharedPrefsPassword">password</string>
    <string name="welcomeMessageSubtitle">Happy Learning :)</string>
    <string name="welcomeMessage">Hello,\n%1$s\n%2$s</string>
    <string name="swipeToSignUp">Swipe Left to sign Up\nRight Swipe to Reset Password</string>
    <string name="backToLogin">Back to Login</string>
    <string name="deleteRecordMessage">Are you sure you want to delete this user ?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="permissionGranted">Permission Granted</string>
    <string name="permissionGrantedAlready">Permission Already Granted</string>
    <string name="green">#2ECC71</string>
    <string name="myLocation">Current Location</string>
    <string name="black">#FF000000</string>
    <string name="purple_700">#FF3700B3</string>
    <string name="withViewPager">withViewPager</string>
    <string name="permissionDeniedMessage">You have denied location permissions earlier.\nIn order to access this feature please enable location permissions.</string>
    <string name="locationReq">Location Services</string>
    <string name="locationReqMessage">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="viewUsage">View Usage</string>
    <string name="dash">-</string>
    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCubic">Toogle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="animateXY">Animate XY</string>
    <string name="animateY">Animate Y</string>
    <string name="animateX">Animate X</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionToggleAutoScale">Toggle AutoScale</string>
    <string name="actionTogglePinch">Pinch</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>
    <string name="LineChart">Line Chart</string>
    <string name="LineChartDesc">The Above Line chart illustrates your electricity usage in units in past month.</string>
    <string name="options">Options</string>
    <string name="Months">X Axis - Months</string>
    <string name="Usage">Y Axis - Electricity Usage (kWh)</string>
    <string name="StackedBarChart">Stacked Bar Chart</string>
    <string name="BarChartDesc">The above Stacked Bar Chart shows comparision between your current and previous year electricity usage.</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="groupBarChart">Group Bar Chart</string>
    <string name="groupBarChartDesc">"Above grouped dataset provides you side by side comparision of your previous year usage in past years along with projected usage in next year in respective months.  "</string>
    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionRemoveDataSet">Remove Dataset</string>
    <string name="CombinedChart">CombinedChart</string>
    <string name="CombinedChartDesc">The above chart displays your current year and projected electricity usage.</string>
    <string name="currentUsage">Current Usage</string>
    <string name="currentBarChartDesc">The above bar chart shows you your current year consumed units of electricity in past months uptill now</string>
    <string name="usageSubtitle">The following charts will give you an insight of your current Usage</string>
    <string name="viewChat">Chat</string>
    <string name="welcomeChatItemMessage">Hello there !</string>
    <string name="messageTitle">title</string>
    <string name="messageBody">body</string>
    <string name="sh_email">loggedInEmail</string>
    <string name="sh_def_email">Anonymous</string>
    <string name="intentFilter">MyData</string>
    <string name="typeMessage">Type a message</string>
    <string name="sample_text_for_testing">Sample text for testing</string>
    <string name="bundleKey_Chat">chatBundle</string>
    <string name="personName">personName</string>
    <string name="messageNotDeliverd">Please try again your message delivery has failed</string>
    <string name="personEmail">personEmail</string>
    <string name="sayHello">"Say \"Hello\" and start Chatting ! "</string>
</resources>